Revert "Merge pull request #5145 from corda/jdk11-migration-gradle5-upgrade" (#5146)
This reverts commit f46377556c34680bb1ee131832e9e042ab5eaabb, reversing
changes made to ba675e73b98f3276af27c235430922e2321b8763.